--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-firebase/database": "^0.2.10",
+    "firebase": "^9.9.0",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0"
