--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-firebase/database": "^0.2.10",
     "firebase": "^9.9.0",
     "next": "12.1.6",
+    "papaparse": "^5.3.2",
     "react": "18.1.0",
     "react-dom": "18.1.0"
   },
