--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "eslint": "eslint . --ext .js,.jsx,.ts,.tsx" 
   },
   "dependencies": {
     "@emotion/react": "^11.9.3",
