--- a/package.json
+++ b/package.json
@@ -15,11 +15,18 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.1",
     "@react-firebase/database": "^0.2.10",
+    "@reduxjs/toolkit": "^1.8.3",
     "firebase": "^9.9.0",
     "next": "12.1.6",
+    "next-redux-wrapper": "^7.0.5",
     "papaparse": "^5.3.2",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-redux": "^8.0.2",
+    "redux": "^4.2.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
