--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "eslint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "eslint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "test": "jest --config ./jest.config.ts"
   },
   "dependencies": {
     "@emotion/react": "^11.9.3",
@@ -17,6 +18,7 @@
     "@react-firebase/database": "^0.2.10",
     "@reduxjs/toolkit": "^1.8.3",
     "firebase": "^9.9.0",
+    "jest": "^29.4.3",
     "next": "12.1.6",
     "next-redux-wrapper": "^7.0.5",
     "papaparse": "^5.3.2",
@@ -29,6 +31,7 @@
     "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
+    "@jest/types": "^29.4.3",
     "@types/node": "17.0.35",
     "@types/papaparse": "^5.3.7",
     "@types/react": "18.0.9",
@@ -42,7 +45,10 @@
     "eslint-plugin-n": "^15.2.4",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.30.1",
+    "jest-environment-jsdom": "^29.4.3",
     "prettier-eslint": "^15.0.1",
+    "ts-jest": "^29.0.5",
+    "ts-node": "^10.9.1",
     "typescript": "4.6.4"
   }
 }
